210. Course Schedule II

--- a/LeetCode/210.course-schedule-ii.md
+++ b/LeetCode/210.course-schedule-ii.md
@@ -17,36 +17,38 @@ class Solution {
 public:
     vector<int> findOrder(int numCourses, vector<vector<int>>& prerequisites) {
         vector<int> in(numCourses, 0);
-        vector<int> visit(numCourses, 0);
+        vector<int> order;
+        map<int, vector<int>> adjList;
+        queue<int> que;
         for (vector<int> v : prerequisites) {
             in[v[0]]++;
+            adjList[v[1]].push_back(v[0]);
         }
-        vector<int> order;
-        while(1) {
-            bool flag = false;
-            for (int i = 0; i < numCourses; i++) {
-                if (in[i] == 0 && !visit[i]) {
-                    order.push_back(i);
-                    visit[i] = 1;
-                    for (vector<int> v : prerequisites) {
-                        if (v[1] == i) {
-                            in[v[0]]--;
-                        }
+        
+        for (int i = 0; i < numCourses; i++) {
+            if (in[i] == 0) {
+                que.push(i);
+            }
+        }
+        while(!que.empty()) {
+            int node = que.front();
+            que.pop();
+            order.push_back(node);
+            if (adjList.count(node)) {
+                for (auto i : adjList[node]) {
+                    in[i]--;
+                    if (in[i] == 0) {
+                        que.push(i);
                     }
-                    flag = true;
                 }
             }
-            if (!flag) {
-                break;
-            }
         }
         
-        if (order.size() != numCourses) {
-            return {};
+        if (order.size() == numCourses) {
+            return order;
         }
         
-        return order;
-
+        return {};
     }
 };
 ```
