--- a/LeetCode/322.coin-change.md
+++ b/LeetCode/322.coin-change.md
@@ -15,47 +15,18 @@ https://leetcode-cn.com/problems/coin-change
 ```c++
 class Solution {
 public:
-    vector<int> searchRange(vector<int>& nums, int target) {
-        vector<int> pos = {-1, -1};
-        int low = 0, high = int(nums.size()) - 1;
-        while (low <= high) {
-            int mid = (high + low) / 2;
-            if (nums[mid] == target) {
-                pos = {mid, mid};
-                int tempLow = low;
-                int tempHigh = mid - 1;
-                // find start
-                while (tempLow <= tempHigh) {
-                    int tempMid = (tempLow + tempHigh) / 2;
-                    if (nums[tempMid] == target) {
-                        pos[0] = tempMid;
-                        tempHigh = tempMid - 1;
-                    } else {
-                        tempLow = tempMid + 1;
-                    }
+    int coinChange(vector<int>& coins, int amount) {
+        vector<int> dp(amount + 1, amount + 1);
+        dp[0] = 0;
+        for (int i = 1; i <= amount; i++) {
+            for (auto v : coins) {
+                if (i >= v) {
+                    dp[i] = min(dp[i - v] + 1, dp[i]);
                 }
-                // find end
-                tempLow = mid + 1;
-                tempHigh = high;
-                while (tempLow <= tempHigh) {
-                    int tempMid = (tempLow + tempHigh) / 2;
-                    if (nums[tempMid] == target) {
-                        pos[1] = tempMid;
-                        tempLow = tempMid + 1;
-                    } else {
-                        tempHigh= tempMid - 1;
-                    }
-                }
-                break;
-            }
-            if (nums[mid] < target) {
-                low = mid + 1;
-            } else {
-                high = mid - 1;
             }
         }
         
-        return pos;
+        return dp[amount] > amount ? -1 : dp[amount];
     }
 };
 ```
